Move the app-version to the dll version

--- a/code/GramParserWorkbench/Pages/Index.cshtml
+++ b/code/GramParserWorkbench/Pages/Index.cshtml
@@ -27,7 +27,7 @@
         </a>.
     </div>
     <div class="app-version">
-        @Model.FullVersion
+        @Model.ParserVersion
     </div>
 </footer>
 <script src="~/scripts/mainPage.js"></script>
