--- a/code/GramParserWorkbench/Pages/Index.cshtml
+++ b/code/GramParserWorkbench/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model GramParserWorkbench.Pages.IndexModel
 @{
-    ViewData["Title"] = "GramParser - Workbench";
+    ViewData["Title"] = "GramParser - Workbench" + Model.TitleQualification;
     ViewData["InstrumentationKey"] = Model.InstrumentationKey;
 }
 <header>
