--- a/code/GramParserWorkbench/Pages/Index.cshtml
+++ b/code/GramParserWorkbench/Pages/Index.cshtml
@@ -32,5 +32,5 @@
 </footer>
 <script src="~/scripts/mainPage.js"></script>
 <script type="text/javascript">
-    startScript('@Model.ParsingApiUrl', @Model.WorkbenchEnvironment);
+    startScript('@Model.ParsingApiUrl', '@Model.WorkbenchEnvironment');
 </script>
