Open doc in separate window

--- a/code/GramParserWorkbench/Pages/Index.cshtml
+++ b/code/GramParserWorkbench/Pages/Index.cshtml
@@ -22,7 +22,7 @@
 <footer>
     <div class="doc-link">
         Documentation & user guide can be
-        <a href="https://github.com/vplauzon/GramParser/tree/master/documentation">
+        <a target="_blank" href="https://github.com/vplauzon/GramParser/tree/master/documentation">
             found here
         </a>.
     </div>
